# aldor

./: .gitignore  .travis.yml  Makefile  README.md  _config.yml  aldor.mk  build-macos.sh  config.mk  config.pm  contact.html  env.sh  eval.html  index.html
aldor/: .autotools  .cproject  .gitignore  .project  AUTHORS  Alog  CMakeLists.txt  COPYRIGHT  Makefile  Makefile.am  Makefile.generic  Makefile.globals  Makefile.in  Makefile.pab  Makefile.win32  NEWS  NMakefile  NMakefile.generic  README.binary-only  README.building  README.library  Rules.mk  ToDo  aclocal.m4  autogen.sh  build.sh  configure  configure.ac  dot_bashrc_env  index.html
aldor/aldor/: Current  Makefile.am  Makefile.in  Makefile.pab  Ports  Rules.mk  Timings  ToDo  Version  Win32Port  build.sh
aldor/aldor/contrib/: Makefile  NMakefile  build.sh
aldor/aldor/contrib/frisco/: Makefile  NMakefile
aldor/aldor/contrib/gmp/: Makefile  NMakefile  aldor-gmp.bat  aldor.gmp.bsh  aldor.gmp.sh  assert.h0  axiomxl.gmp.bsh  axiomxl.gmp.sh  axiomxl.gmp2  axiomxl.gmp3  axlgen.h  axlport.h  bigint.c  cconfig.h  compopt.c  cport.c  ctype.h0  debug.h  dword.h  errno.h0  fm_gmp.c  foam_c.h  foam_cfp.h  format.h  opsys.c  opsys.h  os_macosx_vm.c  os_macs7.c  output.c  stddef.h0  stdlib.h0  store.c  store.h  time.h0
aldor/aldor/lib/: Makefile.am  Makefile.in  Rules.mk  build.sh
aldor/aldor/lib/java/: .classpath  .gitignore  Makefile.am  Makefile.in
aldor/aldor/lib/libfoam/: .gitignore  Makefile.am  Makefile.in  Rules.mk  aldordomainrep.as  axllib.scm  basictuple.as  box.as  build.sh  catobj.as  domain.as  foam_l.lsp  foam_s.scm  hashax.boot  lazyimport.as  pointerdomain.as  ptrcache.as  runtime.as  runtime2.as  runtimelib.as  stringtable.as
aldor/aldor/lib/libfoamlib/: .gitignore  Makefile.am  Makefile.in  README  Rules.mk  array.as  bool.as  build.sh  char.as  file.as  foamcat.as  foamlib.as  format.as  langx.as  list.as  lv.as  machine.as  oslow.as  partial.as  pointer.as  segment.as  sfloat.as  sinteger.as  textwrit.as  tuple.as
aldor/aldor/src/: .gitignore  ChangeLog  Makefile.am  Makefile.in  Makefile.pab  Rules.mk  abcheck.c  abcheck.h  ablogic.c  ablogic.h  abnorm.c  abnorm.h  abpretty.c  abpretty.h  absub.c  absub.h  absyn.c  absyn.h  abuse.c  abuse.h  aldor.conf  aldorlib.c  aldorlib.h  annabs.c  annabs.h  any_as.s  archive.c  archive.h  assert.h0  axl.c  axl.h  axl.z  axl_y.sed  axlcomp.c  axlcomp.h  axlgen.c  axlgen.h  axlgen0.h  axlobs.c  axlobs.h  (+403 more)
aldor/aldor/src/java/: Makefile.am  foam.txt  genjava.c  genjava.h  javacode.c  javacode.h  javaobj.c  javaobj.h  javasig.c  javasig.h  main.c  ostream.c  ostream.h
aldor/aldor/subcmd/: Makefile.am  Makefile.in  Makefile.pab  Rules.mk  build.sh
aldor/aldor/test/: .gitignore  L1.as  Makefile.am  Makefile.in  catdef2.as  clos.as  cross.as  enumtest.as  exquo.as  generlist.as  jimport.as  lit.as  m1.as  match1.as  multinever.as  rec2.as  rectest.as  rectest.java  selfcond.as  seq.as  silly.as  simple_j.as  simple_j.java  small.as  strtable1.as  test-common.mk  test-config.mk.in  testlist.as  xdom.as  xgenerpkg.as
aldor/aldor/tools/: Makefile.am  Makefile.in  Rules.mk  build.sh  pr
aldor/aldorug/: .gitignore  Makefile  TsCheck  ack.tex  aldorug.tex  aldorughtex.awk  aldorugmacs.tex  axiom.cls  c.tex  comsgdb.awk  develop.tex  errors.tex  foreign.tex  formal.tex  fornlisp.tex  fortran.tex  grammar.tex  hyperref.cfg  install.tex  interact.tex  intro.tex  langenvs.tex  langexpr.tex  langextd.tex  langfuns.tex  langgenr.tex  langlibs.tex  langloop.tex  langmach.tex  langmacs.tex  langsumm.tex  langsyn.tex  langtdef.tex  langties.tex  langtry.tex  langtype.tex  messages.tex  msghelp.tex  notices.tex  options.tex  (+11 more)
aldor/aldorug/Src/: comsgdb.msg
aldor/aldorug/TexMacs/: Makefile  acmconf.sty  axiom.sty  axiomps.sty  axiomxl.sty  scrunch.sty
aldor/aldorug/commands/: Makefile  aldorbug.rec  arigato.in  arigato.out  arigato.sh  bloop.rec  cside.in  cside.out  cside.sh  error0.in  error0.sh  separate.in  separate.sh  sieve.in  sieve.out  sieve.sh  verbose.rec
aldor/aldorug/examples/: Makefile  arigato.as  aside.as  ax1.rec  ax2.rec  choose.as  compact.as  comtest.as  cside.c  error0.as  error1.as  error2.as  error3.as  forn1.as  matops.as  moderr1  moderr2  nputs.c  poker.as  sieve.as  simple1.as  simple2.as  simple3.as  simple4a.as  simple4b.as  testroun.as
aldor/aldorug/pictures/: Makefile  axlcat.ps  axlcat.ps0
aldor/aldorug/samples/: Makefile  cycle.as  cycle.out  cycle.tnb  extend.as  extend.out  extend.tnb  f77sort.as  f77sort.tnb  gens.as  gens.tnb  greet.as  greet.out  greet.tnb  hello.tnb  imod.as  imod.tnb  mandel.as  mandel.out  mandel.tnb  myfact.as  myfact.tnb  number.as  objectb.as  objectb.out  objectb.tnb  objectr.as  objectr.out  objectr.tnb  quanc8.as  quanc8.tnb  stack.as  stack.out  stack.tnb  swap.as  swap.out  swap.tnb  symbol.as  symbol.tnb  textin.as  (+5 more)
aldor/css/: code.css
aldor/doc/: build.md  compiler.md  hier.md  index.md
aldor/doc/tex/: Makefile.in
aldor/js/: pages.js
aldor/lib/: .gitignore  Makefile  Makefile.am  Makefile.in  Makefile.pab  NMakefile  Rules.mk  builddoc.mk  buildlib.am  buildlib.mk  config.mk.in  testprog.am
aldor/lib/aldor/: Makefile  Makefile.am  Makefile.generic  Makefile.in  NMakefile  NMakefile.generic  Rules.mk
aldor/lib/algebra/: .gitignore  Makefile  Makefile.am  Makefile.generic  Makefile.in  README
aldor/lib/ax0/: Makefile.in
aldor/lib/axldem/: .gitignore  Makefile.in
aldor/lib/axllib/: .gitignore  Makefile  Makefile.generic  Makefile.in  Makefile.win32  NMakefile  Rules.mk
aldor/lib/debuglib/: Makefile  Makefile.generic
aldor/lib/libax0/: Makefile  attrib.as  ax0.as  mkax.lsp
aldor/lib/libaxldem/: Makefile  Rules.mk  debug.sh  dirprod.as  ibits.as  matopdom.as  nni.as  poly3.as  polycat.as  quanc8.as  random.as
aldor/lib/types/: readme.md
aldor/m4/: .gitignore  ax_lib_readline.m4  build_id.m4  cc_variant.m4  ci.m4  documentation-tests.m4  error-on-warn.m4  git.m4  interp-tests.m4  java-tests.m4  language.m4  readline.m4  sbrk.m4  strict_compile.m4
aldor/mk/: step.mk  topsort.mk
(+3157 files in other folders)
